Fixes overlap on img-soft on mobile devices

--- a/css/nickwhite.css
+++ b/css/nickwhite.css
@@ -719,7 +719,7 @@ i:hover{
 .img-soft {
   margin-top: 10px;
   margin-bottom: 15px;
-  max-width: 60px;
+  max-width: 50px;
   max-height: 60px;
 }
 .ability {
